# routes/cart.py
@@ -1,5 +1,5 @@
 from flask import request, Blueprint, current_app, jsonify, abort
-from flask_jwt_extended import get_jwt, jwt_required
+from flask_jwt_extended import get_jwt, jwt_required, get_jwt_identity, current_user
 from db import connect
 from routes.util.utils import destructuring_utility, reset_sequence_id
 from psycopg2.extras import DictCursor
@@ -17,7 +17,6 @@ class CartManagement:
         @self.blueprint.route("/cart/post", methods=["POST"])
         @jwt_required()
         def post():
-            check_for_admin()
             data = request.get_json()
             if not data:
                 return jsonify({"error": "empty request body "}), 400
@@ -49,6 +48,7 @@ class CartManagement:
                                 "user_id": result["user_id"],
                                 "product_id": result["product_id"],
                                 "quantity": result["quantity"],
+                                "id": result["id"],
                             }
                         ),
                         201,
@@ -59,9 +59,6 @@ class CartManagement:
         @self.blueprint.route("/cart/get", methods=["GET"])
         @jwt_required()
         def get():
-            claims = get_jwt()
-            if claims is None:
-                return jsonify({"error": "authorization failed"}), 401
             try:
                 query = f"SELECT * FROM {self.table_name};"
                 with connect() as conn:
@@ -78,35 +75,20 @@ class CartManagement:
                             ),
                             500,
                         )
-
-                    data = [
-                        {
-                            "user_id": row["user_id"],
-                            "product_id": row["product_id"],
-                            "quantity": row["quantity"],
-                        }
-                        for row in result
-                    ]
-                    return jsonify({"msg": data}), 200
+                    return jsonify({"msg": destructuring_utility(result)}), 200
             except Exception as ex:
                 return jsonify({"error": str(ex)}), 500
 
         @self.blueprint.route("/cart/delete/<id>", methods=["DELETE"])
         @jwt_required()
         def delete_by_id(id):
-            claims = get_jwt()
-            if claims is None:
-                return jsonify({"error": "authorization failed"}), 401
+            if check_for_admin() is None:
+                return jsonify({"error": "insufficient permissions"}), 401
             try:
                 data_to_delete = select_from_table(self.table_name, id=id)
                 if data_to_delete is None:
-                    current_app.logger.debug(
-                        f"could not fetch result from table {self.table_name}, id: {id}"
-                    )
                     return jsonify({"error": f"no record found with id {id}"}), 404
-                destructured_data, destructured_response = destructuring_utility(
-                    data_to_delete
-                )
+                destructured_data = destructuring_utility(data_to_delete)
 
                 result = delete_records_from_table(self.table_name, id=id)
                 if result is None:
@@ -117,6 +99,46 @@ class CartManagement:
                 return jsonify({"value error": str(ve)}), 500
             except Exception as ex:
                 return jsonify({"unexpected error": str(ex)}), 500
+
+        @self.blueprint.route("/cart/delete/user/<id>", methods=["DELETE"])
+        @jwt_required()
+        def delete_for_user(id):
+            identity = get_jwt_identity()
+            try:
+                with connect() as conn:
+                    with conn.cursor(cursor_factory=DictCursor) as cursor:
+                        user = select_from_table("users", email=identity)
+                        if not user:
+                            return (
+                                jsonify({"error": "user at the given id not found"}),
+                                404,
+                            )
+                        if not user:
+                            return jsonify({"error": "user not found"}), 404
+                        cursor.execute(
+                            f"SELECT * FROM {self.table_name} WHERE user_id = %s;",
+                            (id,),
+                        )
+                        cart = cursor.fetchall()
+                        if not cart:
+                            return jsonify({"error": "cart not found"}), 404
+
+                        if user.get("role") == "admin" or cart[0][1] == user.get("id"):
+                            cursor.execute(
+                                f"DELETE FROM {self.table_name} WHERE user_id = %s;",
+                                (id,),
+                            )
+                            conn.commit()
+                            return (
+                                jsonify({"msg": "user's cart deleted successfully"}),
+                                200,
+                            )
+                        elif user.get("id") != cart[1]:
+                            return jsonify({"error": "cart must belong to user"}), 401
+                        else:
+                            return jsonify({"error": "insufficient permissions"}), 401
+            except Exception as ex:
+                return jsonify({"error": str(ex)}), 500
 
     def register_blueprint(self, app):
         app.register_blueprint(self.blueprrint(app))
